# qianji-flow

./: Cargo.toml  README.md
docs/00_mocs/: 20260315141000-qianji-orchestrator-moc.md
docs/20_specs/: 20260315140000-autonomous-audit-feature-v3.md  20260315142000-streaming-llm-executor-spec.md
docs/30_research/: 20260315140500-autonomous-engineering-foundations.md
resources/: llm_generated_flow.toml  meta_diagram_forge.toml  omega_react_paper_banana.toml  polished_tianji_flow.toml  ultimate_power_flow.toml  ultimate_research_flow.toml
resources/config/: qianji.toml
resources/tests/: diamond_dag.toml  probabilistic_branch.toml
src/: error.rs  lib.rs
src/app/: build.rs  mod.rs  presets.rs  qianji_app.rs
src/bootcamp/: llm.rs  manifest.rs  mod.rs  model.rs  runtime.rs  workflow.rs
src/contracts/: bindings.rs  execution.rs  manifest.rs  mechanism.rs  mod.rs
src/engine/: mod.rs
src/executors/: calibration.rs  knowledge.rs  mock.rs  router.rs
src/layout/: bpmn.rs  mod.rs  style.rs
src/python_module/: engine.rs  llm_bridge.rs  mod.rs  runtime.rs  scheduler.rs
src/runtime_config/: constants.rs  env_vars.rs  loader.rs  mod.rs  model.rs  pathing.rs  toml_config.rs
src/safety/: guard.rs  mod.rs
src/scheduler/: checkpoint.rs  mod.rs
src/sovereign/: artifact_observer.rs  mod.rs  thought_aggregator.rs  wendao_adapter.rs  wendao_sink.rs
src/swarm/: mod.rs
src/telemetry/: events.rs  mod.rs
tests/: llm_analyzer.rs  llm_augmented_formal_audit.rs  llm_multi_tenancy.rs  runtime_config.rs  scenarios_test.rs  test_agenda_validation_pipeline.rs  test_compiler_dispatch_routes_llm.rs  test_layout_bpmn.rs  test_qianji_precision_research.rs  test_qianji_trinity_integration.rs  test_scheduler_affinity_failover.rs
tests/integration/: executors_formal_audit.rs  llm_augmented_formal_audit.rs  test_audit_scenario_contract.rs  test_compiler_dispatch_routes.rs  test_formal_adversarial_audit.rs  test_probabilistic_routing.rs  test_qianji_master_research.rs  test_qianji_yaml_orchestration.rs
tests/snapshots/: scenarios__audit_triple_loop.snap  scenarios__cognitive_drift_early_halt.snap  scenarios__llm_analyzer_basic_streaming.snap
tests/support/: mod.rs
tests/unit/: unit_adversarial_loop.rs  unit_qianji_execution.rs  unit_qianji_safety.rs  (+1 more)
(+156 files in other folders)
